blockchain/infraestructura/k8s/ingress/ingress-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  annotations:
    cloud.google.com/neg: '{"ingress":true}'

spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  loadBalancerIP: ${INGRESS_IP}

  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx

  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http

    - name: https
      port: 443
      protocol: TCP
      targetPort: https

    - name: amqp
      port: 5672
      protocol: TCP
      targetPort: 5672
