blockchain/infraestructura/k8s/ingress/blockchain-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blockchain-ingress
  namespace: blockchain-apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /coordinator(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: coordinator
            port:
              number: 5000

      - path: /pool(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: pool-manager
            port:
              number: 6000
